[package]
name = "rlsr"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1.0.188", features = ["std", "derive", "serde_derive"] }
serde_yaml = "0.9"
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
hyper-rustls = { version = "0.27", default-features = false, features = [
    "webpki-tokio",
    "http2",
    "http1",
    "logging",
    "ring",
] }
octocrab = { version = "0.43", features = ["rustls-webpki-tokio"] }
env_logger = "0.9.0"
log = "0.4.16"
tokio-util = { version = "0.7.8", features = ["codec"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "stream",
    "multipart",
    "rustls-tls-webpki-roots",
] }
infer = "0.7.0"
zip = { version = "2.4", default-features = false, features = [
    "deflate",
    "bzip2",
] }
async-trait = "0.1"
color-eyre = { version = "0.6", default-features = false }
camino = "1.0.9"
sha2 = "0.10.7"
config = { version = "0.13.3", features = ["yaml", "yaml-rust", "toml"] }
regex = "1.10.6"
minijinja = {version = "2.2.0", features = ["loader", "builtins"] }
ring = "0.17.14"

[dev-dependencies]
tempfile = { version = "3.19" }
